--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1356,7 +1356,7 @@ textarea.form-control {
 		background-size: cover;
 	  }
 	  &:nth-child(2){
-		background: url(../img/banner/banner-slider-2.jpg) no-repeat center;
+		background: url(../img/banner/house.jpg) no-repeat center;
 		background-size: cover;
 	  }
 	  &:nth-child(3){
